Adding December 2023 and WIP 2024 articles

--- a/src/content/blog.pug
+++ b/src/content/blog.pug
@@ -2,6 +2,20 @@ h2 Blog
 .content
   .row
     .column
+      a(href='/blog/2023/12/studio-roundup-december-2023.html' target='_blank' title='Studio Roundup for December 2023')
+        img(src='/assets/blog/2023/12/1_aN2AdpmiU7S0dGFpWUoixA.webp' style=' width: 100%; height: auto;' alt='Garrett is working on a cartoon version of Lady Gaga\’s Applause music video, recreating the fashionable costumes and sets as close as possible.')
+    .column
+      a(href='/blog/2023/12/studio-roundup-december-2023.html')
+        h3 Studio Roundup for December 2023
+      p.
+        3D Music Videos. Jewellery for Christmas. Game development progress. Building a community.
+      p
+        | Check out our  
+        a(href='/blog/2023/12/studio-roundup-december-2023.html') December 2023 retro
+        | .
+
+  .row
+    .column
       a(href='/blog/2023/11/studio-roundup-november-2023.html' target='_blank' title='Studio Roundup for November 2023')
         img(src='/assets/blog/2023/11/1_CgaG1-mK8Ys4idpaYmNavA.webp' style=' width: 100%; height: auto;' alt='Meet Nerv, a young demon who lives in hell. Demonology is coming in 2024!')
     .column
