Updating sitemap and blog list

--- a/src/content/blog.pug
+++ b/src/content/blog.pug
@@ -2,6 +2,45 @@ h2 Blog
 .content
   .row
     .column
+      a(href='/blog/2024/03/studio-roundup-march-2024.html' target='_blank' title='Studio Roundup for March 2024')
+        img(src='/assets/blog/2024/03/1__M7aKKPzaeL1ubZgMFUeOg.webp' style=' width: 100%; height: auto;' alt='Can you tell which is the render and which is the original reference photo?')
+    .column
+      a(href='/blog/2024/03/studio-roundup-march-2024.html')
+        h3 Studio Roundup for March 2024
+      p.
+        Realistic renders. DevOps tooling. Video ads.
+      p
+        | Check out our 
+        a(href='/blog/2024/03/studio-roundup-march-2024.html') retrospective for March 2024
+        | !
+  .row
+    .column
+      a(href='/blog/2024/02/studio-roundup-february-2024.html' target='_blank' title='Studio Roundup for February 2024')
+        img(src='/assets/blog/2024/02/1_dyIbSVF7tlb9HYpBb4AkMQ.webp' style=' width: 100%; height: auto;' alt='18k white gold petals surrounding a blush pink spinel. Part of the Garrett Ray Blossoms collection.')
+    .column
+      a(href='/blog/2024/02/studio-roundup-february-2024.html')
+        h3 Studio Roundup for February 2024
+      p.
+        Custom Analytics. Valentine's Day Gifts. Tech for Small business.
+      p
+        | Enter our 
+        a(href='/blog/2024/02/studio-roundup-february-2024.html') retrospective for February 2024
+        | .
+  .row
+    .column
+      a(href='/blog/2024/01/studio-roundup-january-2024.html' target='_blank' title='Studio Roundup for January 2024')
+        img(src='/assets/blog/2024/01/1_jvdn9ENFN3e46Mf5GFmpcA.webp' style=' width: 100%; height: auto;' alt='Featuring a pair of baby blue Aquamarine in a tapered baguette and octagon cut for a unique and contrasting pairing. This handmade toi et moi ring is part of the Garrett Ray One of a Kind Collection.')
+    .column
+      a(href='/blog/2024/01/studio-roundup-january-2024.html')
+        h3 Studio Roundup for January 2024
+      p.
+        Find your treasure. MMORPG development updates. Knowledge sharing.
+      p
+        | Learn more in our 
+        a(href='/blog/2024/01/studio-roundup-january-2024.html') January 2024 retro
+        | .
+  .row
+    .column
       a(href='/blog/2023/12/studio-roundup-december-2023.html' target='_blank' title='Studio Roundup for December 2023')
         img(src='/assets/blog/2023/12/1_aN2AdpmiU7S0dGFpWUoixA.webp' style=' width: 100%; height: auto;' alt='Garrett is working on a cartoon version of Lady Gaga\’s Applause music video, recreating the fashionable costumes and sets as close as possible.')
     .column
