#31 - Adding new about us content with styles and images

--- a/src/content/about_us.pug
+++ b/src/content/about_us.pug
@@ -19,28 +19,6 @@ h2 About Us
         | Introducing Paul, a versatile and forward-thinking problem solver with over 15 years in the industry. Beyond the traditional boundaries of coding, Paul has embraced a multifaceted style that seamlessly blends technology and creativity to craft innovative solutions.
       p
         | With a natural ability to envision the intersection of art and technology, Paul&apos;s journey has been characterized by staying at the forefront of the ever-changing tech landscape and pushing the boundaries of what&apos;s possible. He seamlessly adapts to different environments, bringing a perfect blend of technical expertise and creative flair to each project.
-      h4 Skills
-      ul
-        li 3D Programming 
-        li Character design
-        li Dashboard systems
-        li Generative A.I.
-        li Software development
-        li Solution architecture
-        li Technical consulting
-        li UI/UX design
-        li Web development
-        li Video editing
-      h4 Tools
-      ul
-        li Affinity Designer
-        li Affinity Photo
-        li Blender
-        li DaVinci Resolve
-        li Linux. Lots of Linux.
-        li Stable Diffusion
-        li Three.JS
-        li VSCode
     .column
       img(src='/assets/images/about-us/garrett.png' style=' width: 100%; height: auto;' alt='Photo of Garrett studying a whisky blend at a distillery in Scotland')
       h3
@@ -51,28 +29,39 @@ h2 About Us
         | Meet Garrett, the embodiment of sophistication and innovation, renowned as an award-winning bartender, expert jeweler, and connoisseur of rare whiskies.
       p
         | Embracing the digital realm, Garrett shares his passion and expertise as a taste visionary, enriching the online world with his profound knowledge of aesthetics and all things refined.
-      h4 Skills
-      ul
-        li 3D Modelling, Renders and Prints
-        li Creative consulting
-        li Generative A.I.
-        li Graphic design
-        li Photography
-        li Product design
-        li Social media management
-        li Video editing
-      h4 Tools
-      ul
-        li Affinity Designer
-        li Affinity Photo
-        li Blender
-        li DaVinci Resolve
-        li Stable Diffusion
   .row.center
     .wide-column
-      p
-        | If you have a really big idea in mind we can draw upon a network of trusted professionals to fill the ranks of an efficient and effective project delivery team.
-  .row
+      h3 Our process
+      p.
+        Everyone's different and so we follow an iterative approach to delivery, utilising an adaptive approach that scales according to your needs and budget.
+  .row.center
+    .cards
+      .card
+        img(src='/assets/images/process/project_definition.jpg' alt='A digitally altered photo of a hand drawing in a notepad with a pencil')
+        h4 Project Definition
+        p.
+          Using best practices to create a project plan that is robust and holds up in different scenarios, maximising budget efficiency and minimising risks.
+      .card
+        img(src='/assets/images/process/prototype_iteration.jpg' alt='A digitally altered photo of a man working with 3D design software')
+        h4 Prototype Iteration
+        p.
+          We follow a Minimum Viable Product (MVP) approach which allows us to be more efficient, collaborative and adaptive for challenges along the way.
+      .card
+        img(src='/assets/images/process/stakeholder_review.jpg' alt='A digitally altered photo of an online meeting with multiple people on camera')
+        h4 Stakeholder Review
+        p.
+          We ensure projects stay on track to successful completion by providing you with regular progress updates, check-ins and implementing your feedback.
+      .card
+        img(src='/assets/images/process/refinement.jpg' alt='A digitally altered photo of two people reviewing content on a laptop')
+        h4 Refinement
+        p.
+          As multiple cycles of iteration are completed, the functionality, usability and overall quality of your project matures until it's ready for launch.
+      .card
+        img(src='/assets/images/process/ongoing_support.jpg' alt='A digitally altered photo of a customer service representatives headset')
+        h4 Ongoing Support
+        p.
+          We provide a 30 days warranty for all our work and can provide further assistance with retainer arrangements for ongoing updates and maintenance.
+  .row.center
     .wide-column
       h3 Our values
   .row
