--- a/docs/assets/1999.css
+++ b/docs/assets/1999.css
@@ -317,6 +317,31 @@ form button:hover {
   flex-basis: 25%;
 }
 
+.content .cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.content .cards .card {
+  border-radius: 1rem;
+  border: solid 1px #FF69CB;
+  flex-basis: calc(80% - 1rem);
+  margin: 1rem 0.5rem;
+  flex-direction: row;
+}
+
+.content .cards .card p {
+  margin: 1rem 1rem 2rem 1rem;
+}
+
+.content .cards .card img {
+  border-radius: 1rem 1rem 0 0;
+  max-width: 100%;
+  height: auto;
+}
+
 .footer {
   min-height: 266px;
   text-align: center;
@@ -337,6 +362,12 @@ form button:hover {
     flex-direction: row;
   }
 
+  .content .cards .card {
+    flex-basis: calc(30% - 1rem);
+    margin: 1rem 0.5rem;
+    flex-direction: column;
+  }  
+
   .footer {
     text-align: left;
   }
@@ -351,7 +382,7 @@ form button:hover {
   .content {
     max-width: 760px;
   }
-  
+ 
 }
 
 @media screen and (min-width: 1200px) {
@@ -410,6 +441,21 @@ form button:hover {
   .content_container .content.portfolio .column {
     margin-bottom: 0rem;
   }
+
+  .content .cards {
+    margin-left: -20%;
+    margin-right: -20%;
+    flex-wrap: inherit;
+  }
+
+  .content .cards .card {
+    border-radius: 1rem;
+    border: solid 1px #FF69CB;
+    flex-basis: calc(20% - 1rem);
+    margin: 0 0.5rem;
+    flex-direction: column;
+  }
+
 
   .content_container.footer .content {
     padding-top: min(320px, 10vh);
