--- a/docs/assets/1999.css
+++ b/docs/assets/1999.css
@@ -317,28 +317,61 @@ form button:hover {
   flex-basis: 25%;
 }
 
-.content .cards {
+.content .cards,
+.content .profiles {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.content .cards .card {
+.content .cards .card,
+.content .profiles .profile {
   border-radius: 1rem;
   border: solid 1px #FF69CB;
-  flex-basis: calc(80% - 1rem);
+  flex-basis: calc(90% - 1rem);
   margin: 1rem 0.5rem;
   flex-direction: row;
 }
 
-.content .cards .card p {
+.content .profiles .profile h3 {
+  margin: 1rem;
+}
+
+.content .cards .card p,
+.content .profiles .profile p {
   margin: 1rem 1rem 2rem 1rem;
 }
 
-.content .cards .card img {
+.content .cards .card .card_image,
+.content .profiles .profile .profile_image {
   border-radius: 1rem 1rem 0 0;
   max-width: 100%;
+  height: auto;
+}
+
+.content .feature {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  border-radius: 1rem;
+  border: solid 1px #FF69CB;
+  flex-basis: calc(90% - 1rem);
+  margin: 1rem 0;
+  padding: 1rem 0;
+}
+
+.content .feature .feature_media,
+.content .feature .feature_content {
+  flex-basis: calc(90% - 1rem);
+  flex-direction: row;
+}
+
+.content .feature .feature_media img {
+  display: block;
+  margin: 1rem auto;
+  width: 50%;
   height: auto;
 }
 
@@ -360,6 +393,33 @@ form button:hover {
 @media screen and (min-width: 768px) {
   .content_container.footer .content .row {
     flex-direction: row;
+  }
+
+  .content .feature {
+    padding: 0;
+  }
+
+  .content .feature .feature_media,
+  .content .feature .feature_content {
+    flex-basis: calc(60% - 2rem);
+    flex-direction: row;
+  }
+
+  .content .feature .feature_content {
+    flex-basis: calc(40% - 2rem);
+    padding: 1.5rem 2rem;
+  }
+
+  .content .feature .feature_media img {
+    border-radius: 1rem;
+    display: block;
+    margin: inherit;
+    width: 100%;
+    height: auto;
+  }
+
+  .content .profiles .profile {
+    flex-basis: calc(49% - 1rem);
   }
 
   .content .cards .card {
@@ -442,10 +502,15 @@ form button:hover {
     margin-bottom: 0rem;
   }
 
-  .content .cards {
+  .content .cards,
+  .content .profiles {
     margin-left: -20%;
     margin-right: -20%;
     flex-wrap: inherit;
+  }
+
+  .content .profiles .profile {
+    flex-basis: calc(30% - 1rem);
   }
 
   .content .cards .card {
