#31 - Aligning Our Values features to center

--- a/src/content/about_us.pug
+++ b/src/content/about_us.pug
@@ -65,19 +65,19 @@ h2 About Us
   .row.center
     .wide-column
       h3 Our values
-  .row
+  .row.center
     .feature
       .feature_media
         img(src='/assets/images/about-us/aboriginal-flag.png' alt='The Australian Aboriginal Flag')
       .feature_content
         p Open Studios acknowledges the Nyoongar Whadjuk people - traditional custodians of this land. We wish to acknowledge the strength of their continuing culture and pay our respects to Elders past and present.
-  .row
+  .row.center
     .feature
       .feature_content
         p Free and Open Source software is as much a way of thinking as it is a licensing scheme, as such we strive to be accountable, transparent, informative and useful to others in all business interactions and activities.
       .feature_media
         img(src='/assets/images/about-us/linux.png' alt='Collage of Open Source project logos')
-  .row
+  .row.center
     .feature
       .feature_media
         img(src='/assets/images/about-us/newpride.png' alt='2018 Progress Pride Flag by Daniel Quasar')
