#41 - Description on blog list page

--- a/src/content/blog.pug
+++ b/src/content/blog.pug
@@ -8,9 +8,9 @@ h2 Blog
       a(href='/blog/2024/04/studio-roundup-april-2024.html')
         h3 Studio Roundup for April 2024
       p.
-        Realistic renders. DevOps tooling. Video ads.
+        One Of A Kind. Marketing Databases. Website Optimisation.
       p
-        | Check out our 
+        | Explore our 
         a(href='/blog/2024/04/studio-roundup-april-2024.html') retrospective for April 2024
         | !
   .row
