--- a/docs/assets/styles/1999.css
+++ b/docs/assets/styles/1999.css
@@ -285,6 +285,10 @@ form button:hover {
   max-width: 960px;
 }
 
+.content.wide {
+  max-width: 1280px;
+}
+
 .content_container .content{
   margin: 0px auto;
 }
@@ -375,6 +379,14 @@ form button:hover {
   height: auto;
 }
 
+.content .feature.wide {
+  padding: 1rem;
+}
+
+.content .feature.wide .feature_content {
+  padding: 2rem;
+}
+
 .footer {
   min-height: 266px;
   text-align: center;
@@ -391,6 +403,11 @@ form button:hover {
 }
 
 @media screen and (min-width: 768px) {
+
+  .content .feature.wide {
+    margin: 0 -2rem;
+  }
+
   .content_container.footer .content .row {
     flex-direction: row;
   }
