--- a/src/templates/header.pug
+++ b/src/templates/header.pug
@@ -8,7 +8,7 @@ meta(name='msapplication-TileColor' content='#da532c')
 meta(name='theme-color' content='#000000')
 
 //- CSS
-link(href='/assets/1999.css' rel='stylesheet')
+link(href='/assets/styles/1999.css' rel='stylesheet')
 
 //- Captcha
 script(src="https://www.google.com/recaptcha/api.js")
