--- a/src/content/services.pug
+++ b/src/content/services.pug
@@ -55,5 +55,167 @@ h2 Services
       
   .row.center
     .wide-column
-      p
-        | 
+      h3 Our technical solutions
+      p.
+        The platforms used by Open Studios are part of a considered ecosystem that is robust, scalable and customisable to your unique requirements. We create websites and software that run on industry leading open source frameworks and server infrastructure software.
+      p.
+        Our team is experienced with creative and technical applications across many industries and use cases. You'll be in good hands whether you're trying to make a simple brochure site, customised eCommerce store or setup a learning portal.
+  .row
+    .tiles
+      .tile
+        img(alt='The Linux mascot Tux the Penguin' src='/assets/images/platforms/linux.png' style=' width: 100%; height: 350px; object-fit: contain; object-position: top;')
+        h3 Linux OS
+        p Our team will expertly design a solution to make the best use of Linux based server infrastructure, targetting lower costs and risks. Most of our systems are based on Ubuntu LTS, Nginx and if there are backend requirements PHP/MySQL and/or Node.JS.
+        .tokens
+          .token
+            h4 Distribution
+            h5 Ubuntu
+          .token
+            h4 Web Server
+            h5 Nginx
+          .token
+            h4 Editor
+            h5 Vim
+      .tile
+        img(alt='Matomo Analytics logo' src='/assets/images/platforms/matomo.png' style=' width: 100%; height: 350px; object-fit: contain; object-position: top;')
+        h3 Matomo Analytics
+        p The leading open source alternative to Google Analytics. Our Matomo solutions are deeply customisable allowing you full control of your reporting. Compatible with Google ads, GDPR compliant and you get to own your own data for further use.
+        .tokens
+          .token
+            h4 GDPR Compliant
+            img(width="32" height="32" src='/assets/check.svg' alt='Check icon')
+          .token
+            h4 Own your data
+            img(width="32" height="32" src='/assets/check.svg' alt='Check icon')
+          .token
+            h4 Mobile App
+            img(width="32" height="32" src='/assets/check.svg' alt='Check icon')
+      .tile
+        img(alt='Media Wiki logo' src='/assets/images/platforms/mediawiki.png' style=' width: 100%; height: 350px; object-fit: contain; object-position: top;')
+        h3 Media Wiki
+        p The system powering Wikipedia. Our MediaWiki solutions are customised to your specifications and branding. Facilitating a hub to collaborate in a structured way, empowering users with advanced editing features unlocking new efficiencies within your organisation.
+        .tokens
+          .token
+            h4 Customisation
+            img(width="32" height="32" src='/assets/check.svg' alt='Check icon')
+          .token
+            h4 Integration
+            img(width="32" height="32" src='/assets/check.svg' alt='Check icon')
+          .token
+            h4 Single Sign On
+            img(width="32" height="32" src='/assets/check.svg' alt='Check icon')
+      .tile
+        img(alt='Moodle logo' src='/assets/images/platforms/moodle.png' style=' width: 100%; height: 350px; object-fit: contain; object-position: top;')
+        h3 Moodle LMS
+        p Need a learning management system (LMS)? Our team can design a Moodle system that meets your business goals and legislative obligations. Used by higher education, major corporations and governments around the world as their main learning management system.
+        .tokens
+          .token
+            h4 Countries
+            h5 144
+          .token
+            h4 Plugins
+            h5 2,248
+          .token
+            h4 Users
+            h5 328 million
+      .tile
+        img(alt='Eleventy logo' src='/assets/images/platforms/eleventy.png' style='filter: invert(); width: 100%; height: 350px; object-fit: contain; object-position: top;')
+        h3 11ty Static Websites
+        p Eleventy sites built by Open Studios are SEO ready and compatible with web frameworks like D3.js, THREE.JS and more. Ideal for websites that only need to be setup once with infrequent updates like brochure sites with a couple of pages. Content is stored as code, so we recommend a CMS for larger sites.
+        .tokens
+          .token
+            h4 Fast loading
+            img(width="32" height="32" src='/assets/check.svg' alt='Check icon')
+          .token
+            h4 Flexible
+            img(width="32" height="32" src='/assets/check.svg' alt='Check icon')
+          .token
+            h4 Lower costs
+            img(width="32" height="32" src='/assets/check.svg' alt='Check icon')
+      .tile
+        img(alt='Node.js logo' src='/assets/images/platforms/nodejs.png' style=' width: 100%; height: 350px; object-fit: contain; object-position: top;')
+        h3 Node.JS Applications
+        p Our team uses the widely popular Node.JS framework to build advanced web applications and custom integration middleware. Automate data exchange between your systems, stream data to the browser to connect users in immersive online game worlds and much more.
+        .tokens
+          .token
+            h4 Developers
+            h5 17 million
+          .token
+            h4 Modules
+            h5 1.3 million
+          .token
+            h4 Websites
+            h5 30 million
+      .tile
+        img(alt='THREE.JS logo' src='/assets/images/platforms/threejs.png' style=' width: 100%; height: 350px; object-fit: contain; object-position: top;')
+        h3 THREE.JS Experiences
+        p Give your website visitors an engaging 3D visualisation or interactive video game experience featuring your brand and products. Our team can create custom scenes and models unique to you and then use THREE.JS to ensure they look great on the web and on multiple devices.
+        .tokens
+          .token
+            h4 Contributors
+            h5 1,700
+          .token
+            h4 WebGL Version
+            h5 WebGL 2.0
+          .token
+            h4 Example uses
+            h5 Over 150
+      .tile
+        img(alt='Wordpress logo' src='/assets/images/platforms/wordpress.png' style=' width: 100%; height: 350px; object-fit: contain; object-position: top;')
+        h3 Wordpress CMS
+        p We follow best practices for working with Wordpress, creating robust and scalable plugins that add new frontend and backend features. Tailor make the content management system you need. Ideal for eCommerce, listing websites, larger websites and custom business applications.
+        .tokens
+          .token
+            h4 Best practices
+            img(width="32" height="32" src='/assets/check.svg' alt='Check icon')
+          .token
+            h4 DevOps
+            img(width="32" height="32" src='/assets/check.svg' alt='Check icon')
+          .token
+            h4 Optimisation
+            img(width="32" height="32" src='/assets/check.svg' alt='Check icon')
+  .row.center
+    .wide-column
+      h3 Tools of the trade
+      p.
+        We value an efficient workflow that allows us to keep our own overheads down. Our selection of work tools is based on years of industry experience and ensures we are able to deliver the vision of our clients. It's important to us to finish work on budget and to do so in a good timeframe and with options to further iterate and improve.
+  .row.center
+    .feature.wide
+      .feature_media
+        img(src='/assets/images/tools/affinity_designer.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of a web page being designed in Affinity Designer')
+      .feature_content
+        h4 Illustration and photo editing software
+        p
+          | Our team is most experienced with the Adobe and Affinity suites for producing designs, illustrations and editing photos. We can deliver graphics in all formats including SVG, TIFF and PDF. Assets produced in our creative tools are often for use in other projects such as website designs (pictured) or product photo editing. We can also collaborate with your existing team with online tools like Figma and Canva.
+  .row.center
+    .feature.wide
+      .feature_content
+        h4 3D Design and Rendering Software
+        p
+          | The cornerstone of our capability in 3D Modelling and Rendering, Blender allows our team to access sophisticated tools for producing models, materials and 3D images. We can create custom photo realistic 3D models of  your product designs, optimised game models and create animated sequences for video ads, storytelling and interactive applications.
+      .feature_media
+        img(src='/assets/images/tools/blender.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of Blender being used to create a 3D animation')
+  .row.center
+    .feature.wide
+      .feature_media
+        img(src='/assets/images/tools/davinci.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of DaVinci Resolve being used to edit a video')
+      .feature_content
+        h4 Video Editing Software
+        p
+          | We currently use DaVinci Resolve for sequencing and editing videos, allowing us to make any final touches needed on top of raw footage produced by video cameras and 3D rendering software. Our team is experienced with making good use of the features in DaVinci Resolve to create professional videos with multiple video layers, special effects, text overlays, scene transitions and custom color grading.
+  .row.center
+    .feature.wide
+      .feature_content
+        h4 Development Operations
+        p
+          | Our on premises server hosts our development environments, some of which are custom and others defined in automation tools like Ansible and Docker. Using cloud services for hosting and Github for CI/CD, version control, issue tracking and project management allows our team to work with a broad range of teams around the world. We can work within your organisations coding standards and policies or provide our own recommendations, depending on your needs.
+      .feature_media
+        img(src='/assets/images/tools/vscode.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of VS Code')
+  .row.center
+    .feature.wide
+      .feature_media
+        img(src='/assets/images/tools/dropbox.png' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of the company Dropbox')
+      .feature_content
+        h4 Business Operations
+        p
+          | We have a robust documentation system that ensures nothing is lost. Using Office and Dropbox our organized and structured files keep our production team equipped and informed for maximum efficiency to meet your goals.
