#31 - Refactored CSS into multiple files

--- a/src/templates/1999_layout.pug
+++ b/src/templates/1999_layout.pug
@@ -39,9 +39,9 @@
         - extra_class = ' bg_reverse'
     else 
         - extra_class = ''
-    .content_container(role="main" class=extra_class)
+    .content_row(role="main" class=extra_class)
         block page
-    .content_container.newsletter(role="complementary")
+    .content_row.newsletter(role="complementary")
         .newsletter_bg
         .content
             .row.center
