--- a/docs/assets/styles/1999.css
+++ b/docs/assets/styles/1999.css
@@ -1,18 +1,519 @@
 /* 1999 Styles */
-
 /* Base */
-@import url('base/animation.css');
-@import url('base/html.css');
-@import url('base/fonts.css');
-
+@-moz-keyframes fadeInOut {
+  0% {
+    filter: brightness(0.5);
+  }
+  100% {
+    filter: brightness(1);
+  }
+}
+@-webkit-keyframes fadeInOut {
+  0% {
+    filter: brightness(0.5);
+  }
+  100% {
+    filter: brightness(1);
+  }
+}
+@-o-keyframes fadeInOut {
+  0% {
+    filter: brightness(0.5);
+  }
+  100% {
+    filter: brightness(1);
+  }
+}
+@keyframes fadeInOut {
+  0% {
+    filter: brightness(0.5);
+  }
+  100% {
+    filter: brightness(1);
+  }
+}
+body {
+  margin: 0;
+  padding: 0;
+  font-family: SourceSans, Arial, sans-serif;
+  background-color: #000;
+  color: #fff;
+}
+a {
+  color: #0ef;
+}
+h3 {
+  font-family: VeraMono, Verdana, Geneva, Tahoma, sans-serif;
+  color: #ff69cb;
+  margin: 1.5rem 0;
+}
+p {
+  line-height: 1.5rem;
+}
+form {
+  border: 2px dotted #ff69cb;
+  border-radius: 0.75rem;
+  margin: 2rem 0;
+  padding: 1.5rem;
+}
+form button,
+form textarea,
+form input {
+  width: calc(100% - 2rem);
+  margin: 0.75rem 0rem 1rem;
+  padding: 1rem;
+  border-radius: 0.75rem;
+  border: solid 1px #ff69cb;
+  background: none transparent;
+  color: #fff;
+}
+form button {
+  border-color: #0ef;
+  text-transform: uppercase;
+  width: 100%;
+}
+form button:hover {
+  background: #09a;
+  cursor: pointer;
+}
+@font-face {
+  font-family: SourceSans;
+  src: url("/assets/fonts/SourceSans3-Light.woff");
+  src: url("/assets/fonts/SourceSans3-Light.woff2");
+}
+@font-face {
+  font-family: Stigmature;
+  src: url("/assets/fonts/Stigmature.otf");
+}
+@font-face {
+  font-family: VeraMono;
+  src: url("/assets/fonts/VeraMono.woff");
+  src: url("/assets/fonts/VeraMono.woff2");
+}
 /* Components */
-@import url('components/icon_button.css');
-
+.icon_button {
+  text-decoration: none;
+}
+.icon_button img {
+  width: 1.1rem;
+  height: auto;
+  border-radius: 4px;
+  margin: 0 0.5rem 0 0;
+}
+a.icon_button img:hover {
+  background-color: #fff;
+  box-shadow: 0px 0px 4px #fff;
+}
+.contact_page .icon_button {
+  display: flex;
+  align-items: center;
+  flex-flow: row;
+}
+.contact_page .icon_button img {
+  width: 1.5rem;
+}
 /* Sections */
-@import url('sections/page_wrapper.css');
-@import url('sections/common.css');
-@import url('sections/content_row.css');
-@import url('sections/content.css');
-@import url('sections/header.css');
-@import url('sections/footer.css');
-@import url('sections/menu.css');
+#page-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  overflow-x: hidden;
+}
+#page-wrapper h2 {
+  font-family: Stigmature, "Brush Script MT", cursive;
+  color: #fff;
+  text-shadow: 2.5px 2.5px 5px #ff69cb;
+  text-align: center;
+  font-size: 6rem;
+  font-weight: 100;
+  margin: 2vh 0;
+  text-transform: lowercase;
+  animation: fadeInOut 2s infinite alternate;
+  animation-delay: 0.5s;
+}
+@media screen and (min-width: 1200px) {
+  #page-wrapper h2 {
+    font-size: 10rem;
+  }
+  #page-wrapper {
+    align-items: center;
+  }
+}
+.header,
+.menu,
+.content,
+.footer {
+  position: relative;
+}
+.content_row {
+  position: relative;
+  width: 100vw;
+}
+.content_row .content {
+  padding: 1rem 1.5rem 420px;
+}
+.content_row::before {
+  content: "";
+  background: no-repeat url("/assets/images/backgrounds/highway.jpg");
+  background-position: bottom;
+  background-size: 100%;
+  display: block;
+  height: 100%;
+  mix-blend-mode: screen;
+  position: absolute;
+  width: 100vw;
+  z-index: 0;
+}
+.content_row.bg_reverse::before {
+  background: no-repeat url("/assets/images/backgrounds/reverse.jpg");
+  background-position: bottom;
+  background-size: 100%;
+}
+.content_row.bg_river::before {
+  background: no-repeat url("/assets/images/backgrounds/river.jpg");
+  background-position: bottom center;
+  background-size: cover;
+}
+.content_row.bg_river .content {
+  padding-bottom: 350px;
+}
+.content_row.newsletter::before {
+  background: no-repeat url("/assets/images/backgrounds/newsletter.jpg");
+  background-position: center;
+  background-size: cover;
+}
+.content_row.newsletter .content {
+  padding-top: 10vh;
+  padding-bottom: 10vh;
+}
+.content_row.footer::before {
+  background: no-repeat url("/assets/images/backgrounds/footer.jpg");
+  background-position: bottom;
+  background-size: 100%;
+  padding: 0 2rem 0;
+  width: calc(100vw - 4rem);
+}
+.content_row.footer .narrow-column a {
+  color: #fff;
+  text-decoration: none;
+}
+.content_row.footer .narrow-column a:hover {
+  text-decoration: underline;
+}
+.content a:hover {
+  text-decoration: none;
+  color: #9ff;
+}
+.content a img:hover {
+  opacity: 0.9;
+}
+.content {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0rem 2rem;
+  max-width: 960px;
+}
+.content.wide {
+  max-width: 1280px;
+}
+.row .content {
+  margin: 0px auto;
+}
+.content .row {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  justify-content: space-between;
+}
+.row .content.portfolio .column {
+  margin-bottom: 2.5rem;
+}
+.content .row.center {
+  justify-content: center;
+  text-align: center;
+}
+.content .wide-column {
+  flex-basis: 65%;
+}
+.content .column {
+  flex-basis: 45%;
+}
+.content .narrow-column {
+  flex-basis: 25%;
+}
+.content {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0rem 2rem;
+  max-width: 960px;
+}
+.content.wide {
+  max-width: 1280px;
+}
+.content_row .content {
+  margin: 0px auto;
+}
+.content .row {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  justify-content: space-between;
+}
+.content_row .content.portfolio .column {
+  margin-bottom: 2.5rem;
+}
+.content .row.center {
+  justify-content: center;
+  text-align: center;
+}
+.content .wide-column {
+  flex-basis: 65%;
+}
+.content .column {
+  flex-basis: 45%;
+}
+.content .narrow-column {
+  flex-basis: 25%;
+}
+.content .cards,
+.content .tiles,
+.content .profiles {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.content .cards .card,
+.content .tiles .tile,
+.content .profiles .profile {
+  border-radius: 1rem;
+  border: solid 1px #ff69cb;
+  flex-basis: calc(90% - 1rem);
+  margin: 1rem 0.5rem;
+  flex-direction: row;
+}
+.content .tiles .tile {
+  padding: 0 1rem;
+}
+.content .profiles .profile h3 {
+  margin: 1rem;
+}
+.content .cards .card p,
+.content .profiles .profile p {
+  margin: 1rem 1rem 2rem 1rem;
+}
+.content .cards .card .card_image,
+.content .profiles .profile .profile_image {
+  border-radius: 1rem 1rem 0 0;
+  max-width: 100%;
+  height: auto;
+}
+.content .feature {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  border-radius: 1rem;
+  border: solid 1px #ff69cb;
+  flex-basis: calc(90% - 1rem);
+  margin: 1rem 0;
+  padding: 1rem 0;
+}
+.content .feature .feature_media,
+.content .feature .feature_content {
+  flex-basis: calc(90% - 1rem);
+  flex-direction: row;
+}
+.content .feature .feature_media img {
+  display: block;
+  margin: 1rem auto;
+  width: 50%;
+  height: auto;
+}
+.content .feature.wide {
+  padding: 1rem;
+}
+.content .feature.wide .feature_content {
+  padding: 2rem;
+}
+@media screen and (min-width: 768px) {
+  .content .feature.wide {
+    margin: 1rem -2rem;
+  }
+  .content .feature {
+    padding: 0;
+  }
+  .content .feature .feature_media,
+  .content .feature .feature_content {
+    flex-basis: calc(55% - 2rem);
+    flex-direction: row;
+  }
+  .content .feature .feature_content {
+    flex-basis: calc(45% - 2rem);
+    padding: 1.25rem 2rem;
+    text-align: left;
+  }
+  .content .feature .feature_media img {
+    border-radius: 1rem;
+    display: block;
+    margin: inherit;
+    width: 100%;
+    height: auto;
+  }
+  .content .tiles .tile {
+    flex-basis: calc(49% - 4rem);
+  }
+  .content .profiles .profile {
+    flex-basis: calc(49% - 1rem);
+  }
+  .content .cards .card {
+    flex-basis: calc(30% - 1rem);
+    margin: 1rem 0.5rem;
+    flex-direction: column;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .content {
+    max-width: 760px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header,
+  .menu,
+  .content,
+  .footer {
+    width: 100vw;
+  }
+  .content,
+  .content .row {
+    flex-direction: row;
+    margin: 2rem;
+  }
+  .content_row .content {
+    padding-bottom: 50vh;
+  }
+  .content_row.bg_reverse .content {
+    padding-bottom: 860px;
+  }
+  .content_row .content.portfolio .column {
+    margin-bottom: 0rem;
+  }
+  .content .cards,
+  .content .profiles {
+    margin-left: -20%;
+    margin-right: -20%;
+    flex-wrap: inherit;
+  }
+  .content .profiles .profile {
+    flex-basis: calc(30% - 1rem);
+  }
+  .content .cards .card {
+    border-radius: 1rem;
+    border: solid 1px #ff69cb;
+    flex-basis: calc(20% - 1rem);
+    margin: 0 0.5rem;
+    flex-direction: column;
+  }
+  .content_row.footer .content {
+    padding-top: 10vh;
+    padding-bottom: 30vh;
+  }
+}
+@media screen and (min-width: 2400px) {
+  .content_row .content {
+    padding-bottom: 75vh;
+  }
+}
+.header_bg {
+  pointer-events: none;
+  overflow: hidden;
+  position: absolute;
+  left: 0;
+  right: 0;
+  min-height: 1080px;
+  z-index: 0;
+}
+.header_bg {
+  background: no-repeat url("/assets/images/backgrounds/header.jpg");
+  background-position: center -230px;
+}
+@media screen and (min-width: 3000px) {
+  .header_bg {
+    background-position: center -264px;
+  }
+}
+.header {
+  text-align: center;
+  min-height: 200px;
+}
+.header .h1 {
+  margin: 0;
+  position: relative;
+  z-index: 1;
+}
+.header img {
+  background: #000;
+  background: radial-gradient(circle, #000 50%, rgba(0,0,0,0) 60%);
+  height: auto;
+  max-width: 50vw;
+  animation: fadeInOut 2s infinite alternate;
+}
+@media screen and (min-width: 1200px) {
+  .header img {
+    max-width: inherit;
+  }
+}
+.footer {
+  min-height: 266px;
+  text-align: center;
+}
+.footer ul {
+  list-style: none outside;
+  padding: 0px;
+}
+.content_row.footer .content {
+  padding-top: 2.5vh;
+  padding-bottom: 7.5vh;
+}
+@media screen and (min-width: 768px) {
+  .content_row.footer .content .row {
+    flex-direction: row;
+  }
+  .footer {
+    text-align: left;
+  }
+  .content_row.footer .content {
+    padding-top: 5vh;
+    padding-bottom: 15vh;
+  }
+}
+.menu {
+  margin: 1rem;
+  color: #fff;
+  text-align: center;
+}
+.menu ul {
+  padding: 0 1rem;
+}
+.menu li {
+  display: inline-block;
+  font-family: VeraMono, Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1.5rem;
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
+.menu a {
+  color: #01cdfe;
+  text-decoration: none;
+}
+.menu a.active {
+  color: #fff;
+}
+@media screen and (min-width: 1200px) {
+  .menu li {
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+  }
+}
